<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="title_activity_maps">Map</string>

    <!-- TOOLBAR MENU -->
    <string name="menu_map">MAP</string>
    <string name="menu_search">SEARCH</string>
    <string name="menu_edit">EDIT</string>
    <string name="menu_add">ADD NEW</string>
    <string name="menu_calculator">CALCULATOR</string>

    <!-- SEARCH -->
    <string name="search">SEARCH</string>

    <string name="search_date_picker">SINCE</string>
    <string name="search_types">Type : </string>
    <string name="search_poi">POI : </string>
    <string name="search_status">Status : </string>
    <string name="search_neighborhood_selection">Neighborhood : </string>
    <string name="search_nbRooms_selection">Nb of Rooms : </string>
    <string name="search_nbPhotos">Nb of Photos : </string>
    <string name="search_price_min">Price min</string>
    <string name="search_price_max">Price max</string>
    <string name="search_surface_min">Surface min</string>
    <string name="search_surface_max">Surface max</string>

    <string name="search_school">School</string>
    <string name="search_park">Park</string>
    <string name="search_shopping">Shopping</string>
    <string name="search_metro">Metro</string>

    <string name="search_sold">Sold</string>
    <string name="search_not_sold">Not sold</string>
    <string name="search_pick_date">Pick a date</string>

    <string-array name="search_type">
        <item>House</item>
        <item>Apartment</item>
        <item>Duplex</item>
        <item>Penthouse</item>
    </string-array>

    <string-array name="search_priceMin">
        <item>0</item>
        <item>50000</item>
        <item>100000</item>
        <item>150000</item>
    </string-array>

    <string-array name="search_priceMax">
        <item>500000</item>
        <item>400000</item>
        <item>300000</item>
        <item>200000</item>
    </string-array>

    <string-array name="search_surfaceMin">
        <item>0</item>
        <item>50</item>
        <item>100</item>
        <item>150</item>
    </string-array>

    <string-array name="search_surfaceMax">
        <item>500</item>
        <item>400</item>
        <item>300</item>
        <item>200</item>
    </string-array>

    <string-array name="search_nbRooms">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="search_nbPhotos">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="search_neighborhood">
        <item>All</item>
        <item>Centre ville</item>
        <item>Port de commerce</item>
        <item>St Martin</item>
    </string-array>

    <!-- EDITION -->
    <string name="edition_update">EDIT</string>
    <string name="popup_title_permission_files_access">Authorize access to your photos</string>
    <string name="popup_title_permission_take_photo">Authorize to take a photo with your phone</string>

    <string name="edition_area">Area : </string>
    <string name="edition_price">Price : </string>
    <string name="edition_surface">Surface : </string>
    <string name="edition_nbRooms">Nb Rooms : </string>
    <string name="edition_description">Description : </string>
    <string name="edition_status">Status : </string>
    <string name="edition_type">Type : </string>
    <string name="edition_agentID">Agent ID : </string>
    <string name="edition_pois">Points of Interest : </string>

    <string name="edition_photos">Photos : </string>
    <string name="edition_photos_hint">Add a photo</string>
    <string name="edition_photos_take_hint">Take a photo</string>
    <string name="edition_photos_descriptions">Photo description : </string>
    <string name="edition_photos_descriptions_hint">Describe the photo</string>


    <string name="edition_address">Address : </string>
    <string name="edition_address_streetNb"> N° : </string>
    <string name="edition_address_streetName">Street : </string>
    <string name="edition_address_apptNb">Appt : </string>
    <string name="edition_address_zip">Zip Code : </string>
    <string name="edition_address_city">City : </string>
    <string name="edition_address_country">Country : </string>
    <string name="edition_address_latitude">Latitude : </string>
    <string name="edition_address_longitude">Longitude : </string>

    <string name="media">Media</string>

    <!-- CALCULATOR ACTIVITY -->

    <string name="calculator_loan">Loan asked : </string>
    <string name="calculator_loan_hint">$$</string>
    <string name="calculator_down_payment">Down payment : </string>
    <string name="calculator_down_payment_hint">$$</string>
    <string name="calculator_interest_rate">Interest rate : </string>
    <string name="calculator_interest_rate_hint">%</string>
    <string name="calculator_duration">Duration : </string>
    <string name="calculator_duration_hint">Number of years</string>

    <string name="calculator_calculate">Calculate</string>
    <string name="calculator_monthly_payment">Monthly payments : </string>
    <string name="calculator_interests">Total interests : </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
