<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom"
        android:title="@string/menu_edit"/>

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom"
        android:title="@string/menu_add"/>


    <item
        android:id="@+id/menu_calculator"
        android:icon="@drawable/ic_euro"
        app:showAsAction="ifRoom"
        android:title="@string/menu_calculator"/>

    <item
        android:id="@+id/menu_map"
        android:icon="@drawable/ic_map"
        app:showAsAction="ifRoom"
        android:title="@string/menu_map"/>

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        android:title="@string/menu_search"/>

</menu>