<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.openclassrooms.realestatemanager.controllers.fragments.SearchFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_search_root_layout"
    android:orientation="vertical">

    <!-- Type Checkbox-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_types"/>

        <CheckBox android:id="@+id/checkbox_house"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_house"/>

        <CheckBox android:id="@+id/checkbox_apartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_apartment" />

        <CheckBox android:id="@+id/checkbox_duplex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_duplex"/>

        <CheckBox android:id="@+id/checkbox_penthouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_penthouse"/>

    </LinearLayout>

    <!-- Price Spinners -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_price_min"/>
        <Spinner
            android:id="@+id/search_priceMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_price_max"/>
        <Spinner
            android:id="@+id/search_priceMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- Surface Spinners -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_surface_min"/>
        <Spinner
            android:id="@+id/search_surfaceMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_surface_max"/>
        <Spinner
            android:id="@+id/search_surfaceMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <!-- NbRooms + Neighborhood Spinners-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_nbRooms_selection"/>
        <Spinner
            android:id="@+id/search_nbRooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_neighborhood_selection"/>
        <Spinner
            android:id="@+id/search_neighborhood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- Point Of Interest Checkbox-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_poi"/>

        <CheckBox android:id="@+id/checkbox_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_school"/>

        <CheckBox android:id="@+id/checkbox_park"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_park" />

        <CheckBox android:id="@+id/checkbox_shopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_shopping"/>

        <CheckBox android:id="@+id/checkbox_metro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_metro"/>

    </LinearLayout>

    <!-- NbPhotos Spinners-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_nbPhotos"/>
        <Spinner
            android:id="@+id/search_nbPhotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <!-- Status + DatePicker -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/search_status">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_status"/>
            <RadioButton android:id="@+id/search_sold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_sold"/>
            <RadioButton android:id="@+id/search_not_sold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_not_sold"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_date_picker"/>

        <EditText
            android:id="@+id/search_since"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="15dp"
            android:textColor="@android:color/black"
            android:editable="false"/>
    </LinearLayout>


    <!-- Button Search -->
    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="15dip"
        android:text="@string/search"
        android:textColor="#FFF"
        android:background="@color/colorPrimary"
        android:textStyle="bold"/>

</LinearLayout>